--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@libsql/client": "^0.15.4",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
